Sua code tong hop cong thuc

--- a/Run_CT.ipynb
+++ b/Run_CT.ipynb
@@ -10,7 +10,9 @@
     "from CPU import funcs\n",
     "import pandas as pd\n",
     "import os\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "import json as js"
    ]
   },
   {
@@ -19,15 +21,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nam = 2024\n",
-    "\n",
+    "Nam = 2018\n",
     "FOLDER_CT = \"DATA_CT/CT_MaxiMin\"\n",
-    "PATH_DF_CT = f\"{FOLDER_CT}/{Nam}.csv\"\n",
     "PATH_DATA = \"HOSE_2007_2024.xlsx\"\n",
-    "PATH_SAVE = \"Data\"\n",
+    "PATH_SAVE = \"Data/MaxiMin3\"\n",
     "INTEREST = 1.06\n",
     "VALUEARG_THRESHOLD = 500000000.0\n",
     "\n",
+    "# Khong chinh sua sau dong nay\n",
+    "PATH_DF_CT = f\"{FOLDER_CT}/{Nam}.csv\"\n",
     "os.makedirs(PATH_SAVE+f\"/{Nam}\", exist_ok=True)\n",
     "\n",
     "df_CT = pd.read_csv(PATH_DF_CT)\n",
@@ -46,20 +48,22 @@
     "results = []\n",
     "vis = Base(data, INTEREST, VALUEARG_THRESHOLD)\n",
     "\n",
-    "for i in range(len(df_CT)):\n",
-    "    ct_ = df_CT.loc[i, \"CT\"]\n",
+    "for k in range(len(df_CT)):\n",
+    "    ct_ = df_CT.loc[k, \"CT\"]\n",
     "    list_value = [ct_]\n",
     "    ct = convert_strF_to_arrF(ct_)\n",
     "    weight = calculate_formula(ct, vis.OPERAND)\n",
     "\n",
+    "    #\n",
+    "    i0, i1, i2, i3 = vis.INDEX[0], vis.INDEX[1], vis.INDEX[2], vis.INDEX[3]\n",
+    "\n",
     "    # Max\n",
     "    GeoMax, HarMax, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank = funcs.single_invest(\n",
-    "        weight, vis.INDEX, vis.PROFIT, vis.PROFIT_RANK, vis.PROFIT_RANK_NI, INTEREST\n",
+    "        weight, vis.INDEX, vis.PROFIT, vis.PROFIT_RANK, vis.PROFIT_RANK_NI, vis.INTEREST\n",
     "    )\n",
     "\n",
     "    # Tinh CtyMax\n",
-    "    start, end, end2 = vis.INDEX[0], vis.INDEX[1], vis.INDEX[2]\n",
-    "    wgt = weight[start:end]\n",
+    "    wgt = weight[i0:i1]\n",
     "    arr_max = np.where(wgt==max(wgt))[0]\n",
     "    if arr_max.shape[0] == 1:\n",
     "        CtyMax = vis.symbol_name[vis.SYMBOL[arr_max[0]]]\n",
@@ -68,103 +72,199 @@
     "    else:\n",
     "        CtyMax = \"NotInvest\"\n",
     "        ProMax = 1.06\n",
-    "        Value = -1.7976931348623157e+308\n",
-    "    \n",
+    "        Value = None\n",
+    "\n",
     "    list_value.extend([\n",
-    "        GeoMax, HarMax, Value, CtyMax, ProMax, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\n",
+    "        GeoMax, HarMax, CtyMax, ProMax, Value, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\n",
     "    ])\n",
     "\n",
     "    # Nguong\n",
-    "    Nguong_, GeoNgn_, HarNgn_, ProNgn_ = funcs.multi_invest_1(\n",
-    "        weight, vis.INDEX, vis.PROFIT, INTEREST\n",
+    "    ValGeoNgn, GeoNgn1, ValHarNgn, HarNgn1 = funcs.multi_invest_1(\n",
+    "        weight, vis.INDEX, vis.PROFIT, vis.INTEREST\n",
     "    )\n",
     "\n",
-    "    arr_inv_idx = np.where(wgt > Nguong_)[0]\n",
+    "    if ValGeoNgn >= ValHarNgn:\n",
+    "        Nguong1 = ValGeoNgn\n",
+    "    else:\n",
+    "        Nguong1 = ValHarNgn\n",
+    "\n",
+    "    arr_inv_idx = np.where(wgt > Nguong1)[0]\n",
     "    arr_value = weight[arr_inv_idx]\n",
     "    arr_symbol = vis.SYMBOL[arr_inv_idx]\n",
-    "    \n",
+    "\n",
     "    sort_ = np.argsort(arr_value)[::-1]\n",
     "    arr_value = arr_value[sort_]\n",
     "    arr_symbol = arr_symbol[sort_]\n",
-    "    \n",
-    "    CtyNgn = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
-    "    Values_Ngn = arr_value\n",
     "\n",
-    "    ProNgn1 = vis.PROFIT[start:end][wgt > Nguong_]\n",
+    "    CtyNgn1 = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
+    "    Values_Ngn1 = arr_value\n",
+    "\n",
+    "    ProNgn1 = vis.PROFIT[i0:i1][wgt > Nguong1]\n",
     "    if len(ProNgn1) > 0:\n",
     "        ProNgn1 = ProNgn1.mean()\n",
     "    else:\n",
     "        ProNgn1 = vis.INTEREST\n",
+    "\n",
     "    list_value.extend([\n",
-    "        Nguong_, GeoNgn_, HarNgn_, ProNgn1, CtyNgn, Values_Ngn\n",
+    "        Nguong1, GeoNgn1, HarNgn1, ProNgn1, CtyNgn1, Values_Ngn1\n",
     "    ])\n",
     "\n",
-    "    # Nguong2\n",
+    "    # Nguong 2\n",
     "    ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2 = funcs.multi_invest_2(\n",
-    "        weight, vis.INDEX, vis.PROFIT, vis.SYMBOL, INTEREST, vis.BOOL_ARG\n",
+    "        weight, vis.INDEX, vis.PROFIT, vis.SYMBOL, vis.INTEREST, vis.BOOL_ARG\n",
     "    )\n",
-    "    bool_wgt = weight > HarNgn2\n",
-    "    bool_arg = vis.VALUEARG >= VALUEARG_THRESHOLD\n",
+    "\n",
+    "    bool_wgt = weight > ValHarNgn2\n",
+    "    BOOL_ARG = vis.BOOL_ARG\n",
+    "    INDEX = vis.INDEX\n",
+    "    SYMBOL = vis.SYMBOL\n",
     "    size = vis.INDEX.shape[0] - 1\n",
     "    reason = 0\n",
     "\n",
     "    for i in range(size-2, -1, -1):\n",
-    "        start, end = vis.INDEX[i], vis.INDEX[i+1]\n",
-    "        inv_cyc_val = bool_wgt[start:end] & bool_arg[start:end]\n",
+    "        start, end = INDEX[i], INDEX[i+1]\n",
+    "        inv_cyc_val = bool_wgt[start:end] & BOOL_ARG[start:end]\n",
     "        if reason == 0:\n",
-    "            inv_cyc_sym = vis.SYMBOL[start:end]\n",
-    "            end2 = vis.INDEX[i+2]\n",
+    "            inv_cyc_sym = SYMBOL[start:end]\n",
+    "            end2 = INDEX[i+2]\n",
     "            pre_cyc_val = bool_wgt[end:end2]\n",
-    "            pre_cyc_sym = vis.SYMBOL[end:end2]\n",
+    "            pre_cyc_sym = SYMBOL[end:end2]\n",
     "            coms = np.intersect1d(pre_cyc_sym[pre_cyc_val], inv_cyc_sym[inv_cyc_val])\n",
     "            isin = np.full(end-start, False)\n",
     "            for j in range(end-start):\n",
     "                if inv_cyc_sym[j] in coms:\n",
     "                    isin[j] = True\n",
-    "            \n",
     "            lst_com = np.where(isin)[0]\n",
     "        else:\n",
     "            lst_com = np.where(inv_cyc_val)[0]\n",
-    "        \n",
+    "\n",
     "        if len(lst_com) == 0:\n",
     "            if np.count_nonzero(inv_cyc_val) == 0:\n",
     "                reason = 1\n",
     "        else:\n",
     "            reason = 0\n",
-    "    \n",
-    "    arr_value = weight[lst_com]\n",
+    "\n",
+    "    arr_value = wgt[lst_com]\n",
     "    arr_symbol = vis.SYMBOL[lst_com]\n",
-    "    arr_profit_ = vis.PROFIT[lst_com]\n",
+    "    arr_profit = vis.PROFIT[lst_com]\n",
     "    sort_ = np.argsort(arr_value)[::-1]\n",
     "    arr_value = arr_value[sort_]\n",
     "    arr_symbol = arr_symbol[sort_]\n",
     "\n",
     "    CtyNgn2 = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
     "    Values_Ngn2 = arr_value\n",
-    "    \n",
+    "\n",
+    "    if len(arr_profit) > 0:\n",
+    "        ProNgn2 = arr_profit.mean()\n",
+    "    else:\n",
+    "        ProNgn2 = vis.INTEREST\n",
+    "\n",
     "    list_value.extend([\n",
-    "        ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2, arr_profit_.mean() if len(arr_profit_) > 0 else vis.INTEREST, CtyNgn2, Values_Ngn2\n",
+    "        ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2, ProNgn2, CtyNgn2, Values_Ngn2\n",
+    "    ])\n",
+    "\n",
+    "    # Maximum_Min_3\n",
+    "    ValGeo3, MinGeo3, ValHar3, MinHar3 = funcs.maximum_min_3(\n",
+    "        weight, vis.INDEX, vis.PROFIT, vis.INTEREST\n",
+    "    )\n",
+    "\n",
+    "    if ValGeo3 >= ValHar3:\n",
+    "        Nguong_mm3 = ValGeo3\n",
+    "    else:\n",
+    "        Nguong_mm3 = ValHar3\n",
+    "\n",
+    "    arr_inv_idx = np.where(wgt > Nguong_mm3)[0]\n",
+    "    arr_value = weight[arr_inv_idx]\n",
+    "    arr_symbol = vis.SYMBOL[arr_inv_idx]\n",
+    "\n",
+    "    sort_ = np.argsort(arr_value)[::-1]\n",
+    "    arr_value = arr_value[sort_]\n",
+    "    arr_symbol = arr_symbol[sort_]\n",
+    "\n",
+    "    CtyNgn_mm3 = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
+    "    Values_Ngn_mm3 = arr_value\n",
+    "\n",
+    "    ProNgn_mm3 = vis.PROFIT[start:end][wgt > Nguong_mm3]\n",
+    "    if len(ProNgn_mm3) > 0:\n",
+    "        ProNgn_mm3 = ProNgn_mm3.mean()\n",
+    "    else:\n",
+    "        ProNgn_mm3 = vis.INTEREST\n",
+    "\n",
+    "    list_value.extend([\n",
+    "        Nguong_mm3, MinGeo3, MinHar3, ProNgn_mm3, CtyNgn_mm3, Values_Ngn_mm3\n",
+    "    ])\n",
+    "\n",
+    "    # Nguong3\n",
+    "    ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3 = funcs.multi_invest_3(\n",
+    "        weight, vis.INDEX, vis.PROFIT, vis.SYMBOL, vis.INTEREST, vis.BOOL_ARG\n",
+    "    )\n",
+    "\n",
+    "    bool_wgt = weight > ValHarNgn3\n",
+    "    BOOL_ARG = vis.BOOL_ARG\n",
+    "    INDEX = vis.INDEX\n",
+    "    SYMBOL = vis.SYMBOL\n",
+    "    size = vis.INDEX.shape[0] - 1\n",
+    "    reason = 0\n",
+    "\n",
+    "    for i in range(size-3, -1, -1):\n",
+    "        start, end = INDEX[i], INDEX[i+1]\n",
+    "        inv_cyc_val = bool_wgt[start:end] & BOOL_ARG[start:end]\n",
+    "        if reason == 0:\n",
+    "            inv_cyc_sym = SYMBOL[start:end]\n",
+    "            end2, end3 = INDEX[i+2], INDEX[i+3]\n",
+    "            pre_cyc_val = bool_wgt[end:end2]\n",
+    "            pre_cyc_sym = SYMBOL[end:end2]\n",
+    "            pre2_cyc_val = bool_wgt[end2:end3]\n",
+    "            pre2_cyc_sym = SYMBOL[end2:end3]\n",
+    "            coms = np.intersect1d(pre_cyc_sym[pre_cyc_val], inv_cyc_sym[inv_cyc_val])\n",
+    "            coms = np.intersect1d(coms, pre2_cyc_sym[pre2_cyc_val])\n",
+    "            isin = np.full(end-start, False)\n",
+    "            for j in range(end-start):\n",
+    "                if inv_cyc_sym[j] in coms:\n",
+    "                    isin[j] = True\n",
+    "            lst_com = np.where(isin)[0]\n",
+    "        else:\n",
+    "            lst_com = np.where(inv_cyc_val)[0]\n",
+    "\n",
+    "        if len(lst_com) == 0:\n",
+    "            if np.count_nonzero(inv_cyc_val) == 0:\n",
+    "                reason = 1\n",
+    "        else:\n",
+    "            reason = 0\n",
+    "\n",
+    "    arr_value = wgt[lst_com]\n",
+    "    arr_symbol = vis.SYMBOL[lst_com]\n",
+    "    arr_profit = vis.PROFIT[lst_com]\n",
+    "    sort_ = np.argsort(arr_value)[::-1]\n",
+    "    arr_value = arr_value[sort_]\n",
+    "    arr_symbol = arr_symbol[sort_]\n",
+    "\n",
+    "    CtyNgn3 = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
+    "    Values_Ngn3 = arr_value\n",
+    "\n",
+    "    if len(arr_profit) > 0:\n",
+    "        ProNgn3 = arr_profit.mean()\n",
+    "    else:\n",
+    "        ProNgn3 = vis.INTEREST\n",
+    "\n",
+    "    list_value.extend([\n",
+    "        ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3, ProNgn3, CtyNgn3, Values_Ngn3\n",
     "    ])\n",
     "\n",
     "    # Slope\n",
     "    list_value.extend(list(funcs.find_slope(weight, vis.INDEX, vis.PROFIT, vis.INTEREST)))\n",
     "\n",
-    "    # maximumMin\n",
-    "\n",
-    "    ValGeo3, MinGeo3, ValHar3, MinHar3 = funcs.maximum_min_3(\n",
-    "        weight, vis.INDEX, vis.PROFIT, vis.INTEREST\n",
-    "    )\n",
-    "    list_value.extend([ValGeo3, MinGeo3, ValHar3, MinHar3])\n",
-    "\n",
     "    results.append(list_value)\n",
     "\n",
     "data_save = pd.DataFrame(results)\n",
-    "data_save.columns = [\"CT\"]+\"GeoMax, HarMax, Value, CtyMax, ProMax, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\".split(\", \")\\\n",
-    "                    +[\"Nguong1\", \"GeoNgn1\", \"HarNgn1\", \"ProNgn1\", \"CtyNgn1\", \"Values_Ngn1\"]\\\n",
-    "                    +[\"ValGeoNgn2\", \"GeoNgn2\", \"ValHarNgn2\", \"HarNgn2\", \"ProNgn2\", \"CtyNgn2\", \"Values_Ngn2\"]\\\n",
-    "                    +[\"Slope_avg\", \"Slope_wgt_avg\"]\\\n",
-    "                    +[\"ValGeo3\", \"MinGeo3\", \"ValHar3\", \"MinHar3\"]\n",
-    "data_save.to_csv(PATH_SAVE+f\"/{Nam}/Invest.csv\", index=False)"
+    "data_save.columns = [\"CT\"]+\\\n",
+    "                    \"GeoMax, HarMax, CtyMax, ProMax, Value, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\".split(\", \")+\\\n",
+    "                    \"Nguong1, GeoNgn1, HarNgn1, ProNgn1, CtyNgn1, Values_Ngn1\".split(\", \")+\\\n",
+    "                    \"ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2, ProNgn2, CtyNgn2, Values_Ngn2\".split(\", \")+\\\n",
+    "                    \"Nguong_mm3, MinGeo3, MinHar3, ProNgn_mm3, CtyNgn_mm3, Values_Ngn_mm3\".split(\", \")+\\\n",
+    "                    \"ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3, ProNgn3, CtyNgn3, Values_Ngn3\".split(\", \")+\\\n",
+    "                    [\"Slope_avg\", \"Slope_wgt_avg\"]\n",
+    "data_save.to_csv(PATH_SAVE+f\"/{Nam}/Invest.csv\", index=False)\n"
    ]
   },
   {
@@ -173,10 +273,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "import json as js\n",
     "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_valueMax.json\", \"w\") as f:\n",
     "    js.dump(dict(sorted(dict(Counter(data_save[\"CtyMax\"])).items(), key=lambda x: x[1], reverse=True)), f, indent=4)\n",
+    "\n",
+    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn1\"]==\"\"])}\n",
+    "temp = []\n",
+    "for i in range(len(data_save)):\n",
+    "    text = data_save.loc[i, \"CtyNgn1\"]\n",
+    "    lst = text.split(\"_\")\n",
+    "    if \"\" in lst:\n",
+    "        lst.remove(\"\")\n",
+    "    temp.extend(lst)\n",
+    "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
+    "    dict_[k] = v\n",
+    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong1.json\", \"w\") as f:\n",
+    "    js.dump(dict_, f, indent=4)\n",
     "\n",
     "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn2\"]==\"\"])}\n",
     "temp = []\n",
@@ -191,19 +302,31 @@
     "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong2.json\", \"w\") as f:\n",
     "    js.dump(dict_, f, indent=4)\n",
     "\n",
-    "\n",
-    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn1\"]==\"\"])}\n",
+    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn3\"]==\"\"])}\n",
     "temp = []\n",
     "for i in range(len(data_save)):\n",
-    "    text = data_save.loc[i, \"CtyNgn1\"]\n",
+    "    text = data_save.loc[i, \"CtyNgn3\"]\n",
     "    lst = text.split(\"_\")\n",
     "    if \"\" in lst:\n",
     "        lst.remove(\"\")\n",
     "    temp.extend(lst)\n",
     "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
     "    dict_[k] = v\n",
-    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong.json\", \"w\") as f:\n",
-    "    js.dump(dict_, f, indent=4)"
+    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong3.json\", \"w\") as f:\n",
+    "    js.dump(dict_, f, indent=4)\n",
+    "\n",
+    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn_mm3\"]==\"\"])}\n",
+    "temp = []\n",
+    "for i in range(len(data_save)):\n",
+    "    text = data_save.loc[i, \"CtyNgn_mm3\"]\n",
+    "    lst = text.split(\"_\")\n",
+    "    if \"\" in lst:\n",
+    "        lst.remove(\"\")\n",
+    "    temp.extend(lst)\n",
+    "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
+    "    dict_[k] = v\n",
+    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong_mm3.json\", \"w\") as f:\n",
+    "    js.dump(dict_, f, indent=4)\n"
    ]
   }
  ],
