Chay tong hop cong thuc bang data 2024 moi

--- a/Run_CT.ipynb
+++ b/Run_CT.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nam = 2018\n",
+    "Nam = 2024\n",
     "FOLDER_CT = \"DATA_CT/CT_MaxiMin\"\n",
-    "PATH_DATA = \"HOSE_2007_2024.xlsx\"\n",
+    "PATH_DATA = \"HOSE_Field_2024_official.xlsx\"\n",
     "PATH_SAVE = \"Data/MaxiMin3\"\n",
     "INTEREST = 1.06\n",
     "VALUEARG_THRESHOLD = 500000000.0\n",
@@ -45,24 +45,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = []\n",
-    "vis = Base(data, INTEREST, VALUEARG_THRESHOLD)\n",
-    "\n",
-    "for k in range(len(df_CT)):\n",
-    "    ct_ = df_CT.loc[k, \"CT\"]\n",
-    "    list_value = [ct_]\n",
-    "    ct = convert_strF_to_arrF(ct_)\n",
-    "    weight = calculate_formula(ct, vis.OPERAND)\n",
-    "\n",
-    "    #\n",
-    "    i0, i1, i2, i3 = vis.INDEX[0], vis.INDEX[1], vis.INDEX[2], vis.INDEX[3]\n",
-    "\n",
-    "    # Max\n",
+    "def single_invest(weight, vis:Base):\n",
+    "    i0, i1 = vis.INDEX[0], vis.INDEX[1]\n",
     "    GeoMax, HarMax, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank = funcs.single_invest(\n",
     "        weight, vis.INDEX, vis.PROFIT, vis.PROFIT_RANK, vis.PROFIT_RANK_NI, vis.INTEREST\n",
     "    )\n",
     "\n",
-    "    # Tinh CtyMax\n",
     "    wgt = weight[i0:i1]\n",
     "    arr_max = np.where(wgt==max(wgt))[0]\n",
     "    if arr_max.shape[0] == 1:\n",
@@ -74,11 +62,11 @@
     "        ProMax = 1.06\n",
     "        Value = None\n",
     "\n",
-    "    list_value.extend([\n",
-    "        GeoMax, HarMax, CtyMax, ProMax, Value, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\n",
-    "    ])\n",
+    "    return GeoMax, HarMax, CtyMax, ProMax, Value, ValGeo, GeoLim, ValHar, HarLim, GeoRank, HarRank\n",
     "\n",
-    "    # Nguong\n",
+    "def multi_invest_1(weight, vis:Base):\n",
+    "    i0, i1 = vis.INDEX[0], vis.INDEX[1]\n",
+    "    wgt = weight[i0:i1]\n",
     "    ValGeoNgn, GeoNgn1, ValHarNgn, HarNgn1 = funcs.multi_invest_1(\n",
     "        weight, vis.INDEX, vis.PROFIT, vis.INTEREST\n",
     "    )\n",
@@ -105,11 +93,11 @@
     "    else:\n",
     "        ProNgn1 = vis.INTEREST\n",
     "\n",
-    "    list_value.extend([\n",
-    "        Nguong1, GeoNgn1, HarNgn1, ProNgn1, CtyNgn1, Values_Ngn1\n",
-    "    ])\n",
+    "    return Nguong1, GeoNgn1, HarNgn1, ProNgn1, CtyNgn1, Values_Ngn1\n",
     "\n",
-    "    # Nguong 2\n",
+    "def multi_invest_2(weight, vis:Base):\n",
+    "    i0, i1 = vis.INDEX[0], vis.INDEX[1]\n",
+    "    wgt = weight[i0:i1]\n",
     "    ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2 = funcs.multi_invest_2(\n",
     "        weight, vis.INDEX, vis.PROFIT, vis.SYMBOL, vis.INTEREST, vis.BOOL_ARG\n",
     "    )\n",
@@ -159,11 +147,11 @@
     "    else:\n",
     "        ProNgn2 = vis.INTEREST\n",
     "\n",
-    "    list_value.extend([\n",
-    "        ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2, ProNgn2, CtyNgn2, Values_Ngn2\n",
-    "    ])\n",
+    "    return ValGeoNgn2, GeoNgn2, ValHarNgn2, HarNgn2, ProNgn2, CtyNgn2, Values_Ngn2\n",
     "\n",
-    "    # Maximum_Min_3\n",
+    "def maximum_min_3(weight, vis:Base):\n",
+    "    i0, i1 = vis.INDEX[0], vis.INDEX[1]\n",
+    "    wgt = weight[i0:i1]\n",
     "    ValGeo3, MinGeo3, ValHar3, MinHar3 = funcs.maximum_min_3(\n",
     "        weight, vis.INDEX, vis.PROFIT, vis.INTEREST\n",
     "    )\n",
@@ -184,17 +172,17 @@
     "    CtyNgn_mm3 = \"_\".join([vis.symbol_name[s] for s in arr_symbol])\n",
     "    Values_Ngn_mm3 = arr_value\n",
     "\n",
-    "    ProNgn_mm3 = vis.PROFIT[start:end][wgt > Nguong_mm3]\n",
+    "    ProNgn_mm3 = vis.PROFIT[i0:i1][wgt > Nguong_mm3]\n",
     "    if len(ProNgn_mm3) > 0:\n",
     "        ProNgn_mm3 = ProNgn_mm3.mean()\n",
     "    else:\n",
     "        ProNgn_mm3 = vis.INTEREST\n",
     "\n",
-    "    list_value.extend([\n",
-    "        Nguong_mm3, MinGeo3, MinHar3, ProNgn_mm3, CtyNgn_mm3, Values_Ngn_mm3\n",
-    "    ])\n",
+    "    return Nguong_mm3, MinGeo3, MinHar3, ProNgn_mm3, CtyNgn_mm3, Values_Ngn_mm3\n",
     "\n",
-    "    # Nguong3\n",
+    "def multi_invest_3(weight, vis:Base):\n",
+    "    i0, i1 = vis.INDEX[0], vis.INDEX[1]\n",
+    "    wgt = weight[i0:i1]\n",
     "    ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3 = funcs.multi_invest_3(\n",
     "        weight, vis.INDEX, vis.PROFIT, vis.SYMBOL, vis.INTEREST, vis.BOOL_ARG\n",
     "    )\n",
@@ -247,11 +235,29 @@
     "    else:\n",
     "        ProNgn3 = vis.INTEREST\n",
     "\n",
-    "    list_value.extend([\n",
-    "        ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3, ProNgn3, CtyNgn3, Values_Ngn3\n",
-    "    ])\n",
+    "    return ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3, ProNgn3, CtyNgn3, Values_Ngn3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "vis = Base(data, INTEREST, VALUEARG_THRESHOLD)\n",
     "\n",
-    "    # Slope\n",
+    "for k in range(len(df_CT)):\n",
+    "    ct_ = df_CT.loc[k, \"CT\"]\n",
+    "    list_value = [ct_]\n",
+    "    ct = convert_strF_to_arrF(ct_)\n",
+    "    weight = calculate_formula(ct, vis.OPERAND)\n",
+    "\n",
+    "    list_value.extend(list(single_invest(weight, vis)))\n",
+    "    list_value.extend(list(multi_invest_1(weight, vis)))\n",
+    "    list_value.extend(list(multi_invest_2(weight, vis)))\n",
+    "    list_value.extend(list(maximum_min_3(weight, vis)))\n",
+    "    list_value.extend(list(multi_invest_3(weight, vis)))\n",
     "    list_value.extend(list(funcs.find_slope(weight, vis.INDEX, vis.PROFIT, vis.INTEREST)))\n",
     "\n",
     "    results.append(list_value)\n",
@@ -264,7 +270,7 @@
     "                    \"Nguong_mm3, MinGeo3, MinHar3, ProNgn_mm3, CtyNgn_mm3, Values_Ngn_mm3\".split(\", \")+\\\n",
     "                    \"ValGeoNgn3, GeoNgn3, ValHarNgn3, HarNgn3, ProNgn3, CtyNgn3, Values_Ngn3\".split(\", \")+\\\n",
     "                    [\"Slope_avg\", \"Slope_wgt_avg\"]\n",
-    "data_save.to_csv(PATH_SAVE+f\"/{Nam}/Invest.csv\", index=False)\n"
+    "data_save.to_csv(PATH_SAVE+f\"/{Nam}/Invest.csv\", index=False)"
    ]
   },
   {
@@ -302,19 +308,6 @@
     "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong2.json\", \"w\") as f:\n",
     "    js.dump(dict_, f, indent=4)\n",
     "\n",
-    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn3\"]==\"\"])}\n",
-    "temp = []\n",
-    "for i in range(len(data_save)):\n",
-    "    text = data_save.loc[i, \"CtyNgn3\"]\n",
-    "    lst = text.split(\"_\")\n",
-    "    if \"\" in lst:\n",
-    "        lst.remove(\"\")\n",
-    "    temp.extend(lst)\n",
-    "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
-    "    dict_[k] = v\n",
-    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong3.json\", \"w\") as f:\n",
-    "    js.dump(dict_, f, indent=4)\n",
-    "\n",
     "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn_mm3\"]==\"\"])}\n",
     "temp = []\n",
     "for i in range(len(data_save)):\n",
@@ -326,6 +319,19 @@
     "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
     "    dict_[k] = v\n",
     "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong_mm3.json\", \"w\") as f:\n",
+    "    js.dump(dict_, f, indent=4)\n",
+    "\n",
+    "dict_ = {\"So cong thuc khong dau tu\": len(data_save[data_save[\"CtyNgn3\"]==\"\"])}\n",
+    "temp = []\n",
+    "for i in range(len(data_save)):\n",
+    "    text = data_save.loc[i, \"CtyNgn3\"]\n",
+    "    lst = text.split(\"_\")\n",
+    "    if \"\" in lst:\n",
+    "        lst.remove(\"\")\n",
+    "    temp.extend(lst)\n",
+    "for k, v in dict(sorted(dict(Counter(temp)).items(), key=lambda x: x[1], reverse=True)).items():\n",
+    "    dict_[k] = v\n",
+    "with open(f\"{PATH_SAVE}/{Nam}/Khuyen_nghi_dau_tu_theo_Nguong3.json\", \"w\") as f:\n",
     "    js.dump(dict_, f, indent=4)\n"
    ]
   }
